--- a/.github/workflows/scrape-calendar.yml
+++ b/.github/workflows/scrape-calendar.yml
@@ -2,7 +2,8 @@ name: Scrape calendar and publish data
 
 on:
   schedule:
-    - cron: '0 */12 * * *'   # every 12 hours (adjust)
+    # - cron: '0 */12 * * *'   # every 12 hours (adjust)
+    - cron: '0 13 * * *'    # every day at 13:00
   workflow_dispatch:        # manual "Run workflow" button
   # issue_comment:
     # types: [created]        # allow triggering via an issue comment
